fixed navbar collapsepoint

--- a/src/compass/sass/bootstrap/_bootstrap-variables.scss
+++ b/src/compass/sass/bootstrap/_bootstrap-variables.scss
@@ -279,37 +279,37 @@
 
 // Extra small screen / phone
 //** Deprecated `$screen-xs` as of v3.0.1
-// $screen-xs:                  480px
+ $screen-xs:                  480px;
 //** Deprecated `$screen-xs-min` as of v3.2.0
-// $screen-xs-min:              $screen-xs
+ $screen-xs-min:              $screen-xs;
 //** Deprecated `$screen-phone` as of v3.0.1
 // $screen-phone:               $screen-xs-min
 
 // Small screen / tablet
 //** Deprecated `$screen-sm` as of v3.0.1
-// $screen-sm:                  768px
-// $screen-sm-min:              $screen-sm
+ $screen-sm:                  768px;
+ $screen-sm-min:              $screen-sm;
 //** Deprecated `$screen-tablet` as of v3.0.1
 // $screen-tablet:              $screen-sm-min
 
 // Medium screen / desktop
 //** Deprecated `$screen-md` as of v3.0.1
-// $screen-md:                  992px
-// $screen-md-min:              $screen-md
+ $screen-md:                  992px;
+ $screen-md-min:              $screen-md;
 //** Deprecated `$screen-desktop` as of v3.0.1
 // $screen-desktop:             $screen-md-min
 
 // Large screen / wide desktop
 //** Deprecated `$screen-lg` as of v3.0.1
-// $screen-lg:                  1200px
-// $screen-lg-min:              $screen-lg
+ $screen-lg:                  1200px;
+ $screen-lg-min:              $screen-lg;
 //** Deprecated `$screen-lg-desktop` as of v3.0.1
 // $screen-lg-desktop:          $screen-lg-min
 
 // So media queries don't overlap when required, provide a maximum
-// $screen-xs-max:              ($screen-sm-min - 1)
-// $screen-sm-max:              ($screen-md-min - 1)
-// $screen-md-max:              ($screen-lg-min - 1)
+ $screen-xs-max:              ($screen-sm-min - 1);
+ $screen-sm-max:              ($screen-md-min - 1);
+ $screen-md-max:              ($screen-lg-min - 1);
 
 //== Grid system
 //
@@ -321,9 +321,9 @@
 // $grid-gutter-width:         30px
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-// $grid-float-breakpoint:     $screen-sm-min
+ $grid-float-breakpoint:     $screen-md-min;
 //** Point at which the navbar begins collapsing.
-// $grid-float-breakpoint-max: ($grid-float-breakpoint - 1)
+ $grid-float-breakpoint-max: ($grid-float-breakpoint - 1);
 
 //== Container sizes
 //
