--- a/src/compass/sass/styles.scss
+++ b/src/compass/sass/styles.scss
@@ -8,8 +8,8 @@
 @import "bootstrap";
 
 // Import Bootswatch paper theme
-@import "bootstrap/bootswatch-variables";
-@import "bootstrap/bootswatch";
+//@import "bootstrap/bootswatch-variables";
+//@import "bootstrap/bootswatch";
 
 @import "utilities/variables";
 
@@ -190,3 +190,99 @@
         border-radius: 0;
     }
 }
+
+@media (max-width: 991px) {
+//    .navbar-header {
+//        float: none;
+//    }
+//    .navbar-toggle {
+//        display: block;
+//    }
+//    .navbar-collapse {
+//        border-top: 1px solid transparent;
+//        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+//    }
+//    .navbar-collapse.collapse {
+//        display: none!important;
+//    }
+//    .navbar-nav {
+//        float: none!important;
+//        margin: 7.5px -15px;
+//    }
+//    .navbar-nav>li {
+//        float: none;
+//    }
+//    .navbar-nav>li>a {
+//        padding-top: 10px;
+//        padding-bottom: 10px;
+//    }
+//    .navbar-text {
+//        float: none;
+//        margin: 15px 0;
+//    }
+//    /* since 3.1.0 */
+//    .navbar-collapse.collapse.in { 
+//        display: block!important;
+//    }
+//    .collapsing {
+//        overflow: hidden!important;
+//    }
+//    
+//    .dropdown {
+//        float: none;
+//    }
+//    .navbar-tabs-centered {
+//        display: inline;   
+//    }
+//    
+//    .navbar-buttons {
+//        position: static;
+//    }
+}
+
+//@media (max-width: 991px) {
+//    .navbar-header {
+//        float: none;
+//    }
+//    .navbar-left,.navbar-right {
+//        float: none !important;
+//    }
+//    .navbar-toggle {
+//        display: block;
+//    }
+//    .navbar-collapse {
+//        border-top: 1px solid transparent;
+//        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+//    }
+//    .navbar-fixed-top {
+//        top: 0;
+//        border-width: 0 0 1px;
+//    }
+//    .navbar-collapse.collapse {
+//        display: none!important;
+//    }
+//    .navbar-nav {
+//        float: none!important;
+//        margin-top: 7.5px;
+//    }
+//    .navbar-nav>li {
+//        float: none;
+//    }
+//    .navbar-nav>li>a {
+//        padding-top: 10px;
+//        padding-bottom: 10px;
+//    }
+//    .collapse.in{
+//        display:block !important;
+//    }
+//   .navbar-nav .open .dropdown-menu {
+//       position: static;
+//       float: none;
+//       width: auto;
+//       margin-top: 0;
+//       background-color: transparent;
+//       border: 0;
+//       -webkit-box-shadow: none;
+//       box-shadow: none;
+//    }
+//}
